# Embeded-Software-Architecture-Validation

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  ArchitectureValidatorDesktop.spec  ArchitectureValidatorPro.spec  BUGFIX_PLAN.md  KNOWN_ISSUES.md  LICENSE  PHASE0_PROGRESS.md  PHASE1_PROGRESS.md  PHASE2_PROGRESS.md  README.md  RELEASE_NOTES.md  flatpak-manifest.yml  proposed performance changes.md  pywebview_react_migration_plan.md  requirements.txt
Tests/: __init__.py  debug_loading.py  library_import_verification.py  run_all_tests.py  test_ai_agentic.py  test_ai_context.py  test_ai_credentials.py  test_ai_db_schema_part2.py  test_ai_diff_and_mindmap.py  test_ai_generation_smoke.py  test_ai_providers.py  test_architecture_import.py  test_architecture_manager_dialog.py  test_aspice_dataset.py  test_audit_fixes.py  test_backend_ai.py  test_backend_api.py  test_backend_architecture.py  test_backend_baselines.py  test_backend_changelog.py  test_backend_codemap.py  test_backend_columns.py  test_backend_crypto.py  test_backend_fs.py  test_backend_import.py  test_backend_injection.py  test_backend_jobs.py  test_backend_locking.py  test_backend_prefs.py  test_backend_propagation.py  test_backend_releases.py  test_backend_sse.py  test_backend_static.py  test_backend_symbols.py  test_backend_testdesign.py  test_baseline.py  test_baseline_locking.py  test_baseline_mixin.py  test_baseline_soft_delete.py  test_block_encryption.py  (+53 more)
backend/: app.py  deps.py  handlers.py  state.py
desktop/: main.py  (+1 more)
native/parser_rust/: Cargo.toml
native/parser_rust/src/: lib.rs
(+643 files in other folders)
