[package]
name = "rust_elf_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_elf_parser"
crate-type = ["cdylib"]

[dependencies]
object = "0.32"
gimli = "0.28"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
pyo3 = { version = "0.21", features = ["abi3", "abi3-py310"] }
md5 = "0.7"
